k8s_loesungen/9_kustomize/base/app_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app-deployment
spec:
  selector:
    matchLabels:
      app: demo-app
  replicas: 1
  template:
    metadata:
      name: demo-app
      labels:
        app: demo-app
    spec:
      containers:
      - name: demo-container
        image: viadee/k8s-demo-app:latest
        imagePullPolicy: IfNotPresent
#        env:
#          - name: nav.bgcolor
#            value: "red"
        ports:
        - containerPort: 8080
          name: http
        livenessProbe:
          httpGet:
            port: 8080
            path: /actuator/health
          failureThreshold: 3
          initialDelaySeconds: 30
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            port: 8080
            path: /ready
        resources:
          limits:
            memory: 512Mi
            cpu: 1000m
          requests:
            memory: 256Mi
            cpu: 500m
      restartPolicy: Always
